XMLtoCSV/objects/unpackaged/objects/EM_Event_Team_Member_vod__c.object
<CustomObject>
    <description>Team members for events in Veeva Event Management. Team members are automatically granted edit permission to an event.</description>
    <fields>
        <fullName>Email_PCYC__c</fullName>
        <description>PCYC stamps email from user record for Event Team member</description>
        <formula>Team_Member_vod__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_vod__c</fullName>
        <description>Primary email address of the team member.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event_vod__c</fullName>
        <description>The event for which the person is a team member.</description>
        <label>Event</label>
        <referenceTo>EM_Event_vod__c</referenceTo>
        <relationshipLabel>Event Team Members</relationshipLabel>
        <relationshipName>EM_Event_Team_Member_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Group_Name_vod__c</fullName>
        <description>Stores the name of the public group or queue that is added as a team member.</description>
        <label>Group Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number_PCYC__c</fullName>
        <description>PCYC Stamps Phone Number from user record for selected Event Team Member</description>
        <formula>Team_Member_vod__r.Phone</formula>
        <label>Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number_vod__c</fullName>
        <description>Primary phone number of the team member</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Role_vod__c</fullName>
        <description>Role of an event team member. Team members will automatically have read/write access to an event. Roles can be used in the Event Configuration Page Layout Engine. Custom values can be added to this fied.</description>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Organizer_vod</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approver_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cohost_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Member_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>System users who are part of an event team.</description>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Event_Team_Members_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Event Team Member</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Team Members</pluralLabel>
    <recordTypes>
        <fullName>Event_Team_Member_vod</fullName>
        <active>true</active>
        <description>Event Team Member</description>
        <label>Event_Team_Member_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Group_vod</fullName>
        <active>true</active>
        <description>Used for a group team member</description>
        <label>Group_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Person_Group_vod</fullName>
        <active>true</active>
        <description>Please select a person or a group</description>
        <errorConditionFormula>AND( LEN( Team_Member_vod__r.Id )&gt;0,  LEN( Group_Name_vod__c )&gt;0  )</errorConditionFormula>
        <errorMessage>Please select a person or a group</errorMessage>
    </validationRules>
</CustomObject>